--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
              <div class="cards">
                <img src="assets/img/cards/Circulo.png" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="Card1" >
                <div class="ellipse">
-                 <i class="fas fa-heartbeat icon"></i>
+                 <i id="heartbeat" class="fas fa-heartbeat icon"></i>
                </div>
                <div class="info">
-                 <h2>95</h2>
-                 <p>Total de bancos de leite</p>
+                <h2><span class="num" data-val="95">000</span></h2>
+                <p>Total de bancos de leite</p>
                </div>
              </div>
 
@@ -121,11 +121,11 @@
              <div class="cards">
                <img src="assets/img/cards/Circulo.png" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="Card1" >
                <div class="ellipse">
-                 <i class="fas fa-heartbeat icon"></i>
-               </div>
+                <i id="heartbeat" class="fas fa-heartbeat icon"></i>
+              </div>
                <div class="info">
-                 <h2>20</h2>
-                 <p>Total de doadoras
+                <h2><span class="num" data-val="122">000</span></h2>
+                <p>Total de doadoras
                   </p>
                </div>
              </div>
@@ -138,11 +138,11 @@
              <div class="cards">
                <img src="assets/img/cards/Circulo.png"  class="card-img" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="Card1" >
                <div class="ellipse">
-                 <i class="fas fa-heartbeat icon"></i>
-               </div>
+                <i id="heartbeat" class="fas fa-heartbeat icon"></i>
+              </div>
                <div class="info">
-                 <h2>95</h2>
-                 <p>Total de doações
+                <h2><span class="num" data-val="92">000</span></h2>
+                <p>Total de doações
                    de leite</p>
                </div>
              </div>
@@ -156,10 +156,10 @@
              <div class="cards">
                <img src="assets/img/cards/Circulo.png" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="Card1" >
                <div class="ellipse">
-                 <i class="fas fa-heartbeat icon"></i>
-               </div>
+                <i id="heartbeat" class="fas fa-heartbeat icon"></i>
+              </div>
                <div class="info">
-                 <h2>105</h2>
+                 <h2><span class="num" data-val="105">000</span></h2>
                  <p>Total de doações por mãe</p>
                </div>
              </div>
