--- a/index.html
+++ b/index.html
@@ -75,15 +75,33 @@
   <main class="main">
 <!-- Hero Section -->
 <!-- Hero Section -->
-<section class="banner"  class="banner section dark-background"  >
+<!-- <section class="banner"  class="banner section dark-background"  >
   <div class="banner-logo">
     <img src="assets/img/Banner-vidasEmGotas.png" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
     <a href="#about" class="btn-scroll" title="Scroll Down"><i class="bi bi-chevron-down"></i></a>
 
   </div>
+</section> -->
+
+<section class="hero">
+  
+  <div class="bg-principal">
+    <div class="banner">
+      <div class="banner-content">
+        <div class="logo">
+          <img src="assets/img/logo-vida-em-gotas-dourado.png" alt="Logo">
+        </div>
+        <div class="text-content">
+          <img src="assets/img/Texto-Logo-Branco.png" alt="Vida em Gotas">
+          <a href="#doar" class="btn-get-started">DOAR</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
-</section><!-- /Hero Section -->
+<!-- /Hero Sectionddd -->
 
  
    
